--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
             </div>
             <div class="google-logo">
                 <div>
-
+                    <img src="images/googlelogo_color_272x92dp.png" alt="google logo">
                 </div>
             </div>
             <div class="search-bar">
-
+                <form action="">
+                    <div>
+                        <div class="search-container">
+                            <div class="input-container">
+                                <div class="input-box">
+                                    <div class="looking-glass">
+                                        <img src="images/search_black_24dp.svg" alt="search icon">
+                                    </div>
+                                    <div class="type">
+                                        <input type="text">
+                                    </div>
+                                    <div class="mic">
+                                        <img src="images/mic_black_24dp.svg" alt="mic logo">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="button-container"></div>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="languages">
 
