--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <body>
         <div class="main-body">
             <div class="header">
-
+                <div class="outer-header">
+                    <div class="inner-header">
+                        <div class="app-container">
+                            <div class="gmail">
+                                <div>Gmail</div>
+                                <div>Images</div>
+                            </div>
+                            <div class="apps">
+                                <img src="images/apps_black_24dp.svg" alt="app icon">
+                                <div class="profile"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="google-logo">
                 <div>
@@ -32,16 +45,47 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="button-container"></div>
+                            <div class="button-container">
+                                <centre>
+                                    <button class="search" type="submit">Google Search</button>
+                                    <button class="lucky" type="submit">I'm feeling lucky</button>
+                                </centre>
+                                </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="languages">
-
+                <div class="offered-in">
+                    Google offered in:
+                    <a href="">हिन्दी</a>
+                    <a href="">বাংলা</a>
+                    <a href="">తెలుగు</a>
+                    <a href="">मराठी</a>
+                    <a href="">தமிழ்</a>
+                    <a href="">ગુજરાતી</a>
+                    <a href="">ಕನ್ನಡ</a>
+                    <a href="">മലയാളം</a>
+                    <a href="">ਪੰਜਾਬੀ</a>
+                </div>
             </div>
             <div class="footer">
-
+                <div class="country">India</div>
+                <div class="details">
+                    <div class="about">
+                        <a class="block" href="">About</a>
+                        <a class="block" href="">Advertising</a>
+                        <a class="block" href="">Business</a>
+                        <a class="block" href="">How Search Works</a>
+                    </div>
+                    <div class="privacy">
+                        <a class="block" href="">Privacy</a>
+                        <a class="block" href="">Terms</a>
+                        <div class="setting">
+                            <button class="block">Settings</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
