--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                                 <div>Images</div>
                             </div>
                             <div class="apps">
-                                <img src="images/apps_black_24dp.svg" alt="app icon">
-                                <div class="profile"></div>
+                                <div>
+                                    <img src="images/apps_black_24dp.svg" alt="app icon">
+                                    <button class="profile">P</button>
+                                </div>
                             </div>
                         </div>
                     </div>
