--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
                     <div class="inner-header">
                         <div class="app-container">
                             <div class="gmail">
-                                <div>Gmail</div>
-                                <div>Images</div>
+                                <a href="">Gmail</a>
+                                <a href="">Images</a>
                             </div>
                             <div class="apps">
                                 <div>
-                                    <img src="images/apps_black_24dp.svg" alt="app icon">
+                                    <div class="img">
+                                        <img src="images/apps_black_24dp.svg" alt="app icon">
+                                    </div>
                                     <button class="profile">P</button>
                                 </div>
                             </div>
